--- a/05-password-generator/src/index.css
+++ b/05-password-generator/src/index.css
@@ -9,6 +9,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  width: 100%;
+  display: grid;
+  place-items: center;
 }
 
 code {
