--- a/06-currency-converter/src/index.css
+++ b/06-currency-converter/src/index.css
@@ -9,6 +9,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  background-color: rgb(60, 60, 60);
 }
 
 code {
