--- a/first-app/src/index.css
+++ b/first-app/src/index.css
@@ -1,28 +1,26 @@
 @font-face {
   font-family: Inter;
-  src: url(../public/Fonts/Inter-VariableFont_slnt\,wght.ttf);
+  src: url(../public/Fonts/Inter-VariableFont_slntwght.ttf);
 }
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 body {
   margin: 0;
-  font-family: "Roboto";
+  font-family: "Inter";
 }
 
-.font-inter{
-  font-family: "Inter"
+html {
+  scroll-behavior: smooth;
+  position: relative;
 }
 
-/* code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-} */
+.font-inter {
+  font-family: "Inter";
+}
 
 .why-choose-before::before {
   content: "";
@@ -42,8 +40,8 @@ body {
   width: 100%;
   z-index: 50;
   top: 0;
-  animation: Header 0.5s ease-in-out;
-  box-shadow: 0px 0px 10px 2px grey;
+  animation: Header 1s ease-in-out;
+  box-shadow: 0px 4px 10px #03041c3a;
 }
 
 @keyframes Header {
@@ -53,4 +51,61 @@ body {
   100% {
     transform: translateY(0);
   }
+}
+
+header ul li a.relative::before {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: currentColor;
+  position: absolute;
+  bottom: -20%;
+  left: 0;
+  transform-origin: right top;
+  transform: scale(0, 1);
+  transition: transform 0.3s cubic-bezier(0.74, 0.72, 0.27, 0.24);
+}
+header ul li a.relative:hover::before,
+header ul li a.active:before {
+  transform-origin: left top;
+  transform: scale(1, 1);
+}
+
+.swiper-button-prev:after,
+.swiper-button-next:after {
+  font-size: 14px !important;
+  font-weight: bolder;
+  transition: all 0.3s ease;
+}
+
+.swiper-button-prev:hover:after,
+.swiper-button-next:hover:after {
+  color: #fff;
+}
+.swiper-pagination {
+  transition: 0.3s opacity;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 2%;
+  gap: 10px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin-top: 3rem;
+}
+
+.swiper-pagination-bullet {
+  width: 8px;
+  height: 8px;
+  background: #000;
+  opacity: 0.5;
+  border-radius: 50%;
+  display: inline-block;
+  /* margin: 0 4px; */
+  text-align: center;
+}
+
+.swiper-pagination-bullet-active {
+  opacity: 1;
+  background: #3b5d50;
 }
